# astgen-monorepo

./: MIGRATION_SUMMARY.md  README.md
.github/: monorepo-ci-config.yml
.github/scripts/: detect-changes.js  package-lock.json  package.json
.github/workflows/: astgen-regression-ci.yml  astgen-regression-release.yml  dotnet-astgen-ci.yml  dotnet-astgen-release.yml  go-astgen-ci.yml  (+12 more)
abap-astgen/: README.md
astgen-regression/: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
astgen-regression/docs/examples/: javascript-example.yaml  swift-example.yaml
astgen-regression/docs/superpowers/plans/: 2026-04-23-monorepo-migration.md
astgen-regression/docs/superpowers/specs/: 2026-04-16-monorepo-design.md
astgen-regression/src/astgen_regression/: __init__.py  __main__.py  cli.py  compare.py  config.py  corpus.py  executor.py  metrics.py  report.py  worktree.py
astgen-regression/src/astgen_regression/commands/: compare.py  init.py  local.py
astgen-regression/src/astgen_regression/templates/: regression.yaml.j2  workflow.yml.j2
astgen-regression/tests/: test_commands.py  test_compare.py  test_config.py  test_corpus.py  test_executor.py  test_init.py  test_metrics.py  test_report.py  test_worktree.py
dotnet-astgen/: .editorconfig  .gitignore  LICENSE  Program.cs  README.md
go-astgen/: README.md
javascript-astgen/: README.md  package.json  regression.yaml
ruby-astgen/: README.md
rust-astgen/: Cargo.toml  README.md
swift-astgen/: .gitignore  Package.resolved  Package.swift  README.md  regression.yaml
(+32 files in other folders)
